# stargus

./: meson.build
doc/: iscript_bin.drawio  sc_dat_architecture
src/: Chk.cpp  Dds.cpp  Font.cpp  Grp.cpp  ImagesConverter.cpp  KaitaiConverter.cpp  Palette.cpp  Palette.h  PaletteImage.h  Panel.cpp  Pcx.cpp  PngExporter.cpp  Scm.cpp  Smacker.cpp  UIConsole.cpp  Wav.cpp  Widgets.cpp  meson.build  pacman.cpp  startool.cpp  startool.h
src/dat/: DataHub.cpp  DataHub.h  Flingy.cpp  IScript.cpp  Image.cpp  ImagesConverter.cpp  Portrait.cpp  PortraitsConverter.cpp  Sfx.cpp  SfxConverter.cpp  Sprite.cpp  Tbl.cpp  Unit.cpp  UnitsConverter.cpp  meson.build
src/iscript/: IScript.cpp  IScript.h  IScriptConverter.cpp  IScriptConverter.h  opcode_types.cpp  opcode_types.h
src/kaitai/: iscript_bin.cpp  iscript_bin.h  iscript_bin.ksy  meson.build  opcode_list_type.cpp  opcode_list_type.h
src/sauwetter/: StringUtil.cpp  StringUtil.h  meson.build
src/tileset/: MegaTile.cpp  TiledPaletteImage.cpp  TilesetHub.cpp
test/gamedata/dat/: CSVExporter.cpp  CSVExporter.h  DatTest.cpp  meson.build
test/lua/: CreateUnitLuaTest.cpp  meson.build
test/module/: BreezeTest.cpp  BreezeTest.h  DataChunkTest.cpp  DataChunkTest.h  PcxTest.cpp  PcxTest.h  StormTest.cpp  StormTest.h  TestHelpers.cpp  TiledPaletteImageTest.cpp  meson.build
tools/: meson.build
tools/grptool/: grptool.cpp
tools/iscriptconverter/: iscriptconverter.cpp
tools/sauwetter/: meson.build  sauwetter.cpp
tools/scdat2json/: SCJsonExporter.cpp  SCJsonExporter.h  scdat2json.cpp  to_json.cpp
